기본이 중요하다